First term/Assignments solutions/unit 2 - lesson 3 C Basics/Homework 2 solution/.metadata/.plugins/org.eclipse.cdt.ui/Homework-2_EX-2.build.log
14:24:02 **** Incremental Build of configuration Debug for project Homework-2_EX-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:16:14: error: 'a' undeclared (first use in this function)
  scanf("%c",&a);
              ^
..\main.c:16:14: note: each undeclared identifier is reported only once for each function it appears in

14:24:02 Build Failed. 1 errors, 0 warnings. (took 150ms)

